--- a/portfolio.html
+++ b/portfolio.html
@@ -46,16 +46,16 @@
             <div class="cnt">
             <h2>About Me</h2>
             <p>I'm a web developer passionate about building beautiful and functional website. I have experience in Djnago, HTML,CSS,bootstrap,and github, and I'm always eager to learn more and take on new challenges. My goal is to deliver efficient and scalable web solutions to my clients </p>
-                <a href="https://www.linkedin.com/in/ayushi-chaudhari-b56b102ba/" target="_blank" class="btn btn-outline-primary m-4"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/Ayushi0004" target="_blank" class="btn btn-outline-primary m-4"><i class="fa-brands fa-github"></i></a>
+                <a href="#" target="_blank" class="btn btn-outline-primary m-4"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#" target="_blank" class="btn btn-outline-primary m-4"><i class="fa-brands fa-github"></i></a>
                 <a href="/" target="_blank" class="btn btn-outline-primary m-4"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.instagram.com/its_ayushi97/?hl=es-la%C2%A0" target="_blank" class="btn btn-outline-primary m-4"><i class="fa-brands fa-instagram"></i></a><br>
+                <a href="#" target="_blank" class="btn btn-outline-primary m-4"><i class="fa-brands fa-instagram"></i></a><br>
                 <div class="cv">
                 <a href="/" target="_blank" class="rounded-pill btn btn-primary mt-4">Downlode CV</a>
                 </div>
             </div>
                 <div class="img">
-            <img src="assets/shiva.jpg" alt="">
+            <img src="images/shiva.jpg" alt="">
             
             </div>
         </div>
@@ -67,7 +67,7 @@
             <h2>Projects</h2>
             <div class="project-grid">
                 <div class="project-item">
-                    <img src="https://th.bing.com/th/id/OIP._LuRwYCI1iJz3rTQph219wHaE7?rs=1&pid=ImgDetMain" alt="travel blogs">
+                    <img src="travel.jpg" alt="travel blogs">
                     <h3>Travel Blogs</h3>
                     <p>"Travel Blogs: Your ultimate guide to exploring destinations, tips, and stories from around the world."</p>
                     <div class="explor">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="project-item">
-                    <img src="https://th.bing.com/th/id/OIP._PsWlQjjty4aag7z3AtgFgHaGl?rs=1&pid=ImgDetMain" alt="3rd">
+                    <img src="sasti.jpg" alt="3rd">
                     <h3>Sasti Dukaan</h3>
                     <p>"Sasti Dukan is an affordable e-commerce platform offering a wide range of quality products at low prices."</p>
                     <div class="explor">
