--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
             <h2>Projects</h2>
             <div class="project-grid">
                 <div class="project-item">
-                    <img src="travel.jpg" alt="travel blogs">
+                    <img src="image/travel.jpg" alt="travel blogs">
                     <h3>Travel Blogs</h3>
                     <p>"Travel Blogs: Your ultimate guide to exploring destinations, tips, and stories from around the world."</p>
                     <div class="explor">
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="project-item">
-                    <img src="sasti.jpg" alt="3rd">
+                    <img src="image/sasti.jpg" alt="3rd">
                     <h3>Sasti Dukaan</h3>
                     <p>"Sasti Dukan is an affordable e-commerce platform offering a wide range of quality products at low prices."</p>
                     <div class="explor">
